--- a/Prog7.html
+++ b/Prog7.html
@@ -16,7 +16,7 @@
     <div ng-controller="myCtr" class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
             <div class="inner">
-                <h2 class="masthead-brand">SORTING PAGE</h2>
+                <h2 class="masthead-brand">Welcome To Sorting Page</h2>
         </header>
         <input class="form-control" type="search" ng-model="search.name" placeholder="Search By Name" />
 
