--- a/Prog7.html
+++ b/Prog7.html
@@ -40,7 +40,8 @@
                         <td>{{data.designation}}</td>
                         <td>{{data.id}}</td>
                         <td>{{data.email}}</td>
-                        <td ng-click="removeItem(data)">Delete This!</td>
+                        <td class="divBox" ng-click="removeItem(data)">
+                            <a href="#"></a> Delete This!</td>
                     </tr>
                 </table>
             </p>
